# digit-recognizer-nano

./: .gitignore  README.md  west.yml
.github/workflows/: build-zephyr.yml
app/: CMakeLists.txt  prj.conf
app/boards/: arduino_nano_33_ble.overlay
app/src/: camera.c  camera.h  display.c  display.h  input.c  input.h  main.c  model.cpp  model.hpp  tflite.cpp  tflite.hpp  usb.c  usb.h
drivers/: Kconfig
drivers/video/: CMakeLists.txt  Kconfig
drivers/video/arducam/: CMakeLists.txt  Kconfig  arducam_ov2640.c
dts/bindings/video/: arducam,ov2640.yaml
train/: MNIST_Model_for_Microcontrollers.ipynb
